--- a/.eslintrc
+++ b/.eslintrc
@@ -6,7 +6,12 @@
         "jsx-a11y",
         "import"
     ],
-    "rules": {},
+    "rules": {
+        "react/prefer-stateless-function": [0, { "ignorePureComponents": false }],
+        "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
+        "react/jsx-indent": [1, 4],
+        "indent": [1, 4]
+    },
     "settings": {
         "import/resolver": {
             "node": {
